--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,12 +2,12 @@ background {
 	monitor =
 	
 	# wallpaper
-	path = ~/.config/themes/aa/wallpaper_vibrant.png
-	color = 0xff000000
+	path = ~/.config/hypr/wallpaper_vibrant.png
+	color = 0xff121211
 
 	# effects
-	blur_passes = 0
-	blur_size = 1
+	blur_passes = 1
+	blur_size = 3
 	noise = 0.0117
 	contrast = 0.8916
 	brightness = 0.8217
@@ -20,20 +20,19 @@ label {
 	
 	# text
 	text = $TIME
-	text_align = center
 	color = 0xffeeeeee
 	font_size = 64
 	font_family = JetBrainsMono Nerd Font Mono
 	rotate = 0
 
 	# shadow
-	shadow_passes = 1
-	shadow_size = 2
-	shadow_color = 0xff000000
-	shadow_boost = 4.0
+	shadow_passes = 4
+	shadow_size = 1
+	shadow_color = 0xff121211
+	shadow_boost = 2.0
 
 	# position
-	position = 0, 0
+	position = 0, -100
 	halign = center
 	valign = top
 }
@@ -42,52 +41,51 @@ label {
 	monitor =
 
 	# text
-	text = cmd[update:60000] ~/.config/scripts/utils/show_battery.sh
-	text_align = center
+	text = cmd[update:60000] echo " $(~/.config/scripts/utils/get_battery_capacity.sh)%"
 	color = 0xfffaebe1
 	font_size = 24
 	font_family = JetBrainsMono Nerd Font Mono
 	rotate = 0
 	
 	# shadow
-	shadow_passes = 1
-	shadow_size = 2
-	shadow_color = 0xff000000
-	shadow_boost = 4.0
+	shadow_passes = 4
+	shadow_size = 1
+	shadow_color = 0xff121211
+	shadow_boost = 2.0
 
 	# position
-	position = 0, 60
+	position = 0, -200
 	halign = center
-	valign = center
+	valign = top
 }
 
 input-field {
 	monitor =
 	
 	# size
-	size = 16, 16
+	size = 86, 32
 	
 	# borders
 	outline_thickness = 0
-	rounding = -1
+	rounding = 8
 
 	# dots
-	dots_size = 1.0
-	dots_spacing = 0.15
+	dots_size = 0.5
+	dots_spacing = 0.2
 	dots_center = true
 	dots_rounding = -1
 
 	# colors
 	outer_color = rgb(151515)
-	inner_color = 0xff161618
-	font_color = 0xffd69555
+	inner_color = 0xff121211
+	font_color = 0xfff9ab17
 	capslock_color = -1
 	numlock_color = -1
 	bothlock_color = -1
 	invert_numlock = false
 	swap_font_color = false
-	check_color = 0x00000000
-	fail_color = 0x22ee1111
+	check_color = 0xfffaca16
+	fail_color = 0xffff4f00
 	fail_text =
 
 	# animations
@@ -98,9 +96,15 @@ input-field {
 	# text
 	placeholder_text =
 	hide_input = false
+	
+	# shadow
+	shadow_passes = 1
+	shadow_size = 4
+	shadow_color = 0xff121211
+	shadow_boost = 1.0
 
 	# position
-	position = 0, -80
+	position = 0, 0
 	halign = center
 	valign = center
 }
@@ -110,13 +114,9 @@ general {
 	hide_cursor = true
 	grace = 0
 	ignore_empty_input = false
-	text_trim = true
 	
 	# fades
 	no_fade_in = false
 	no_fade_out = false
-	
-	# pam
-	pam_module = hyprlock
 }
 
