--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -113,36 +113,36 @@ background_tint_gaps 1.0
 dim_opacity 0.4
 
 # black
-color0 #111111
-color8 #111111
+color0 #000000
+color8 #121211
 
 # red
-color1 #ff4f00
-color9 #ff4f00
+color1 #e04040
+color9 #ff5555
 
 # green
-color2  #0bda51
+color2  #00c040
 color10 #0bda51
 
 # yellow
-color3  #faca16
-color11 #faca16
+color3  #d0a000
+color11 #eebb00
 
 # blue
-color4  #007fff
-color12 #007fff
+color4  #0090e0
+color12 #00aaff
 
 # magenta
-color5  #8804ce
-color13 #8804ce
+color5  #7000b0
+color13 #8800cc
 
 # cyan
-color6  #14ffff
-color14 #14ffff
+color6  #00b0b0
+color14 #00cccc
 
 # white
-color7  #eeeeee
-color15 #eeeeee
+color7  #cccccc
+color15 #cccccc
 
 # mark 1
 mark1_foreground black
