added grim shortcut in hyprland, added previews

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -233,6 +233,9 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 # lock session
 bind = $mod, P, exec, pidof hyprlock || hyprlock
 
+# screenshot
+bind = $mod, O, exec, grim -t png
+
 # move focus
 bind = $mod, H, movefocus, l
 bind = $mod, L, movefocus, r
