--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,8 +13,8 @@ general {
 	col.nogroup_border_active = 0xfff9ab17
 
 	# window gaps
-	gaps_in = 12
-	gaps_out = 24
+	gaps_in = 4
+	gaps_out = 8
 	gaps_workspaces = 0
 }
 
@@ -150,7 +150,7 @@ general {
 
 master {
 	# master window
-	new_is_master = true
+	#new_is_master = true
 }
 
 
@@ -218,6 +218,7 @@ $mod = SUPER
 # programs
 bind = $mod, Q, exec, $terminal
 bind = $mod, W, exec, $navigator
+bind = $mod, N, exec, obsidian
 
 # kill / exit
 bind = $mod, C, killactive,
