fixed resolution of xwayland programs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,14 +13,14 @@ general {
 	col.nogroup_border_active = 0xfff9ab17
 
 	# window gaps
-	gaps_in = 4
-	gaps_out = 8
+	gaps_in = 0 #4
+	gaps_out = 0 #8
 	gaps_workspaces = 0
 }
 
 decoration {
 	# corners
-	rounding = 8
+	rounding = 0
 
 	# opacity
 	active_opacity = 1.0
@@ -28,7 +28,7 @@ decoration {
 	fullscreen_opacity = 1.0
 
 	# shadow
-	drop_shadow = true
+	drop_shadow = false
 	shadow_range = 4
 	shadow_render_power = 2
 	shadow_ignore_window = true
@@ -98,7 +98,10 @@ misc {
 # Monitors
 ##########
 
-monitor = , preferred, 0x0, 1.2
+monitor = , highres, 0x0, 1.2
+xwayland {
+    force_zero_scaling = true
+}
 
 
 ##########
@@ -121,8 +124,8 @@ exec-once = hypridle
 # Environment variables
 #######################
 
-env = XCURSOR_SIZE, 24
-env = HYPRCURSOR_SIZE, 24
+env = XCURSOR_SIZE, 16
+env = HYPRCURSOR_SIZE, 16
 
 
 #####################
@@ -218,7 +221,7 @@ $mod = SUPER
 # programs
 bind = $mod, Q, exec, $terminal
 bind = $mod, W, exec, $navigator
-bind = $mod, N, exec, obsidian
+bind = $mod, A, exec, ~/.config/Ankama/ankama_launcher
 
 # kill / exit
 bind = $mod, C, killactive,
