added bluetooth scripts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -98,7 +98,9 @@ misc {
 # Monitors
 ##########
 
-monitor = , highres, 0x0, 1.2
+monitor = eDP-1, 1920x1080@60, 1920x0, 1.2
+monitor = HDMI-A-1, 1920x1080@120, 0x0, 1.2
+
 xwayland {
     force_zero_scaling = true
 }
@@ -221,7 +223,7 @@ $mod = SUPER
 # programs
 bind = $mod, Q, exec, $terminal
 bind = $mod, W, exec, $navigator
-bind = $mod, A, exec, ~/.config/Ankama/ankama_launcher
+bind = $mod, A, exec, ~/.config/scripts/games/ankama_launcher.sh
 
 # kill / exit
 bind = $mod, C, killactive,
@@ -231,8 +233,13 @@ bind = $mod, M, exit,
 bind = $mod, F, fullscreen
 
 # brightness
-bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
-bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+
+# sound
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # lock session
 bind = $mod, P, exec, pidof hyprlock || hyprlock
