--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -249,6 +249,9 @@ focus_follows_mouse no
 
 # clear all
 clear_all_mouse_actions yes
+mouse_map left press ungrabbed mouse_selection normal
+mouse_map left doublepress ungrabbed mouse_selection word
+mouse_map left triplepress ungrabbed mouse_selection line
 
 #############
 # Performance
