--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -98,13 +98,18 @@ misc {
 # Monitors
 ##########
 
-monitor = eDP-1, 1920x1080@60, 1920x0, 1.2
-monitor = HDMI-A-1, 1920x1080@120, 0x0, 1.2
+monitor = , 1920x1080@60, 0x0, 1.2
 
 xwayland {
     force_zero_scaling = true
 }
 
+
+######################
+# Windows & Workspaces
+######################
+
+windowrulev2 = suppressevent maximize, class:.*
 
 ##########
 # Programs
@@ -120,6 +125,7 @@ $navigator = firefox
 
 exec-once = hyprpaper
 exec-once = hypridle
+exec-once = hyprshade on vibrance
 
 
 #######################
@@ -136,7 +142,7 @@ env = HYPRCURSOR_SIZE, 16
 
 general {
 	# mouse sentivity
-	sensitivity = 1.0
+	sensitivity = 0.8
 	apply_sens_to_raw = false
 
 	# window resize
@@ -180,7 +186,7 @@ input {
 	follow_mouse = 1
 	sensitivity = 0
 	accel_profile = flat
-	force_no_accel = false
+	force_no_accel = true
 	left_handed = false
 	scroll_points = 
 	scroll_method = 
@@ -276,11 +282,3 @@ bind = $mod SHIFT, 7, movetoworkspace, 7
 bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, 0, movetoworkspace, 10
-
-
-######################
-# Windows & Workspaces
-######################
-
-windowrulev2 = suppressevent maximize, class:.*
-
