--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -242,6 +242,11 @@ bind = $mod, F, fullscreen
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 
+# shaders
+bind = $mod, V, exec, hyprshade on vibrance
+bind = $mod, B, exec, hyprshade on blue-light-filter
+bind = $mod, N, exec, hyprshade off
+
 # sound
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
