--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -117,6 +117,7 @@ windowrulev2 = suppressevent maximize, class:.*
 
 $terminal = kitty
 $navigator = firefox
+$notes = obsidian
 
 
 ###########
@@ -229,6 +230,7 @@ $mod = SUPER
 # programs
 bind = $mod, Q, exec, $terminal
 bind = $mod, W, exec, $navigator
+bind = $mod, N, exec, $notes
 bind = $mod, A, exec, ~/.config/scripts/games/ankama_launcher.sh
 
 # kill / exit
@@ -245,15 +247,14 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 # shaders
 bind = $mod, V, exec, hyprshade on vibrance
 bind = $mod, B, exec, hyprshade on blue-light-filter
-bind = $mod, N, exec, hyprshade off
 
 # sound
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
-# lock session
-bind = $mod, P, exec, pidof hyprlock || hyprlock
+# power off
+bind = , XF86PowerOff, exec, poweroff
 
 # screenshot
 bind = $mod, O, exec, grim -t png
