added fcitx5 for hangul, updated readme, added install.sh

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -117,7 +117,7 @@ windowrulev2 = suppressevent maximize, class:.*
 
 $terminal = kitty
 $navigator = firefox
-$notes = obsidian
+$notes = obsidian #--enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime
 
 
 ###########
@@ -126,7 +126,8 @@ $notes = obsidian
 
 exec-once = hyprpaper
 exec-once = hypridle
-exec-once = hyprshade on vibrance
+exec-once = hyprshade on vib
+exec-once = fcitx5
 
 
 #######################
@@ -166,6 +167,73 @@ master {
 }
 
 
+#############
+# Keybindings
+#############
+
+# mod key
+$mod = SUPER
+
+# programs
+bind = $mod, Q, exec, $terminal
+bind = $mod, W, exec, $navigator
+bind = $mod, N, exec, $notes
+bind = $mod, A, exec, ~/.config/scripts/games/ankama_launcher.sh
+
+# kill / exit
+bind = $mod, C, killactive,
+bind = $mod, M, exit,
+
+# fullscreen
+bind = $mod, F, fullscreen
+
+# brightness
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+
+# shaders
+bind = $mod, V, exec, hyprshade on vib
+bind = $mod, B, exec, hyprshade on blf
+
+# sound
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# screenshot
+bind = $mod, O, exec, grim -t png
+
+# move focus
+bind = $mod, H, movefocus, l
+bind = $mod, L, movefocus, r
+bind = $mod, K, movefocus, u
+bind = $mod, J, movefocus, d
+
+# switch workspace
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
+
+# mode window to a specific workspace
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
+bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
+bind = $mod SHIFT, 0, movetoworkspace, 10
+
+
 #######
 # Input
 #######
@@ -173,10 +241,10 @@ master {
 input {
 	# keyboard
 	# kb_file = 
-	kb_layout = us
+	kb_layout = kr
 	kb_variant =
 	kb_model =
-	kb_options =
+	kb_options = korean:ralt_hangul
 	kb_rules =
 	numlock_by_default = false
 	resolve_binds_by_sym = false
@@ -218,73 +286,3 @@ gestures {
 	# only affected touchpad
 	workspace_swipe = false
 }
-
-
-#############
-# Keybindings
-#############
-
-# mod key
-$mod = SUPER
-
-# programs
-bind = $mod, Q, exec, $terminal
-bind = $mod, W, exec, $navigator
-bind = $mod, N, exec, $notes
-bind = $mod, A, exec, ~/.config/scripts/games/ankama_launcher.sh
-
-# kill / exit
-bind = $mod, C, killactive,
-bind = $mod, M, exit,
-
-# fullscreen
-bind = $mod, F, fullscreen
-
-# brightness
-bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
-
-# shaders
-bind = $mod, V, exec, hyprshade on vibrance
-bind = $mod, B, exec, hyprshade on blue-light-filter
-
-# sound
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-
-# power off
-bind = , XF86PowerOff, exec, poweroff
-
-# screenshot
-bind = $mod, O, exec, grim -t png
-
-# move focus
-bind = $mod, H, movefocus, l
-bind = $mod, L, movefocus, r
-bind = $mod, K, movefocus, u
-bind = $mod, J, movefocus, d
-
-# switch workspace
-bind = $mod, 1, workspace, 1
-bind = $mod, 2, workspace, 2
-bind = $mod, 3, workspace, 3
-bind = $mod, 4, workspace, 4
-bind = $mod, 5, workspace, 5
-bind = $mod, 6, workspace, 6
-bind = $mod, 7, workspace, 7
-bind = $mod, 8, workspace, 8
-bind = $mod, 9, workspace, 9
-bind = $mod, 0, workspace, 10
-
-# mode window to a specific workspace
-bind = $mod SHIFT, 1, movetoworkspace, 1
-bind = $mod SHIFT, 2, movetoworkspace, 2
-bind = $mod SHIFT, 3, movetoworkspace, 3
-bind = $mod SHIFT, 4, movetoworkspace, 4
-bind = $mod SHIFT, 5, movetoworkspace, 5
-bind = $mod SHIFT, 6, movetoworkspace, 6
-bind = $mod SHIFT, 7, movetoworkspace, 7
-bind = $mod SHIFT, 8, movetoworkspace, 8
-bind = $mod SHIFT, 9, movetoworkspace, 9
-bind = $mod SHIFT, 0, movetoworkspace, 10
