--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ background {
 	monitor =
 	
 	# wallpaper
-	path = ~/.config/hypr/wallpaper_vibrant.png
+	path = ~/.config/hypr/wallpaper.png
 	color = 0xff121211
 
 	# effects
