--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,8 +1,6 @@
 # preload wallpapers
 preload = ~/.config/hypr/wallpaper.png
-preload = ~/.config/hypr/wallpaper_vibrant.png
-preload = ~/.config/hypr/wallpaper_negative.png
 
 # set startup wallpaper
-wallpaper = , ~/.config/hypr/wallpaper_vibrant.png
+wallpaper = , ~/.config/hypr/wallpaper.png
 
