updated hyprlock, deleted bashrc 'conf' alias

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -180,9 +180,10 @@ bind = $mod, W, exec, $navigator
 bind = $mod, N, exec, $notes
 bind = $mod, A, exec, ~/.config/scripts/games/ankama_launcher.sh
 
-# kill / exit
+# kill / exit / lock
 bind = $mod, C, killactive,
 bind = $mod, M, exit,
+bind = $mod, L, exec, pidof hyprlock || hyprlock
 
 # fullscreen
 bind = $mod, F, fullscreen
@@ -204,10 +205,10 @@ bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = $mod, O, exec, grim -t png
 
 # move focus
-bind = $mod, H, movefocus, l
-bind = $mod, L, movefocus, r
-bind = $mod, K, movefocus, u
-bind = $mod, J, movefocus, d
+#bind = $mod, H, movefocus, l
+#bind = $mod, L, movefocus, r
+#bind = $mod, K, movefocus, u
+#bind = $mod, J, movefocus, d
 
 # switch workspace
 bind = $mod, 1, workspace, 1
