--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,3 +1,14 @@
+general {
+	disable_loading_bar = true
+	hide_cursor = true
+	grace = 0
+	ignore_empty_input = false
+	
+	# fades
+	no_fade_in = false
+	no_fade_out = false
+}
+
 background {
 	monitor =
 	
@@ -7,12 +18,84 @@ background {
 
 	# effects
 	blur_passes = 1
-	blur_size = 3
-	noise = 0.0117
-	contrast = 0.8916
-	brightness = 0.8217
-	vibrancy = 0.1696
+	blur_size = 0
+	noise = 0.0 #0.0117
+	contrast = 1.0 #0.8916
+	brightness = 0.6 #0.8217
+	vibrancy = 1.0 #0.1696
 	vibrancy_darkness = 0.0
+}
+
+shape {
+    monitor =
+
+    # style
+    size = 360, 1080
+    color = 0xff121211
+    rounding = 0
+    border_size = 0
+    border_color = 0xff000000
+    rotate = 0
+    xray = false
+	
+    # shadow
+	shadow_passes = 4
+	shadow_size = 4
+	shadow_color = 0xff121211
+	shadow_boost = 2.0
+
+    # position
+    position = 0, 0
+    halign = left
+    valign = top
+}
+
+label {
+	monitor =
+	
+	# text
+	text = cmd[update:86400000] date +"%A"
+	color = 0xffdddddd
+	font_size = 32
+	font_family = JetBrainsMono Nerd Font Mono
+	rotate = 0
+
+	# position
+	position = 50, -100
+	halign = left
+	valign = top
+}
+
+label {
+	monitor =
+	
+	# text
+	text = cmd[update:86400000] date +"%d"
+	color = 0xffdddddd
+	font_size = 32
+	font_family = JetBrainsMono Nerd Font Mono
+	rotate = 0
+
+	# position
+	position = 50, -148
+	halign = left
+	valign = top
+}
+
+label {
+	monitor =
+	
+	# text
+	text = cmd[update:86400000] date +"%B"
+	color = 0xffdddddd
+	font_size = 32
+	font_family = JetBrainsMono Nerd Font Mono
+	rotate = 0
+
+	# position
+	position = 50, -196
+	halign = left
+	valign = top
 }
 
 label {
@@ -20,50 +103,54 @@ label {
 	
 	# text
 	text = $TIME
-	color = 0xffeeeeee
+	color = 0xffdddddd
 	font_size = 64
 	font_family = JetBrainsMono Nerd Font Mono
 	rotate = 0
 
-	# shadow
-	shadow_passes = 4
-	shadow_size = 1
-	shadow_color = 0xff121211
-	shadow_boost = 2.0
-
 	# position
-	position = 0, -100
-	halign = center
-	valign = top
+	position = 50, 200
+	halign = left
+	valign = center
 }
 
 label {
 	monitor =
-
+	
 	# text
-	text = cmd[update:60000] echo " $(~/.config/scripts/utils/get_battery_capacity.sh)%"
-	color = 0xfffaebe1
+	text =  $USER
+	color = 0xfffaca16
 	font_size = 24
 	font_family = JetBrainsMono Nerd Font Mono
 	rotate = 0
-	
-	# shadow
-	shadow_passes = 4
-	shadow_size = 1
-	shadow_color = 0xff121211
-	shadow_boost = 2.0
 
 	# position
-	position = 0, -200
-	halign = center
-	valign = top
+	position = 50, 0
+	halign = left
+	valign = center
+}
+
+label {
+	monitor =
+	
+	# text
+	text = 
+	color = 0xfffaca16
+	font_size = 24
+	font_family = JetBrainsMono Nerd Font Mono
+	rotate = 0
+
+	# position
+	position = 50, -32
+	halign = left
+	valign = center
 }
 
 input-field {
 	monitor =
 	
 	# size
-	size = 86, 32
+	size = 124, 24
 	
 	# borders
 	outline_thickness = 0
@@ -72,13 +159,13 @@ input-field {
 	# dots
 	dots_size = 0.5
 	dots_spacing = 0.2
-	dots_center = true
+	dots_center = false
 	dots_rounding = -1
 
 	# colors
 	outer_color = rgb(151515)
 	inner_color = 0xff121211
-	font_color = 0xfff9ab17
+	font_color = 0xfffaca16
 	capslock_color = -1
 	numlock_color = -1
 	bothlock_color = -1
@@ -97,26 +184,24 @@ input-field {
 	placeholder_text =
 	hide_input = false
 	
-	# shadow
-	shadow_passes = 1
-	shadow_size = 4
-	shadow_color = 0xff121211
-	shadow_boost = 1.0
-
 	# position
-	position = 0, 0
-	halign = center
+	position = 80, -32
+	halign = left
 	valign = center
 }
 
-general {
-	disable_loading_bar = true
-	hide_cursor = true
-	grace = 0
-	ignore_empty_input = false
-	
-	# fades
-	no_fade_in = false
-	no_fade_out = false
-}
+label {
+	monitor =
 
+	# text
+	text = cmd[update:60000] echo " $(~/.config/scripts/utils/get_battery_capacity.sh)%"
+	color = 0xfffaebe1
+	font_size = 14
+	font_family = JetBrainsMono Nerd Font Mono
+	rotate = 0
+	
+	# position
+	position = 50, 100
+	halign = left
+	valign = bottom
+}
