added fcitx5 config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,7 +126,6 @@ $notes = obsidian #--enable-features=UseOzonePlatform --ozone-platform=wayland -
 
 exec-once = hyprpaper
 exec-once = hypridle
-exec-once = hyprshade on vib
 exec-once = fcitx5
 
 
@@ -193,8 +192,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 
 # shaders
-bind = $mod, V, exec, hyprshade on vib
-bind = $mod, B, exec, hyprshade on blf
+bind = $mod, V, exec, ~/.config/scripts/utils/cycle_shaders.sh
 
 # sound
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
