--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,6 +179,9 @@ bind = $mod, W, exec, $navigator
 bind = $mod, N, exec, $notes
 bind = $mod, A, exec, ~/.config/scripts/games/ankama_launcher.sh
 
+# ags
+bind = $mod, S, exec, ~/.config/scripts/utils/toggle_ags.sh
+
 # kill / exit / lock
 bind = $mod, C, killactive,
 bind = $mod, M, exit,
