fixed zsh prompt, added foot theming, added nvim lsps (hyprls, bashsl), fixed hypr mix_bw theme borders, added gitignore, updated zsh configs (re-located files into .config), updated imp/exp scripts, updated README

--- a/hypr/themes/min_bw.conf
+++ b/hypr/themes/min_bw.conf
@@ -1,10 +1,10 @@
 general {
 	# window borders
-	border_size = 2
+	border_size = 3
 	no_border_on_floating = false
 
 	col.inactive_border = 0x00000000
-	col.active_border = 0xff888888
+	col.active_border = 0xffdddddd
 	col.nogroup_border = 0x00000000
 	col.nogroup_border_active = 0xffdddddd
 
