fixed foot colors, fixed hyprland background color, updated ls alias, added nvim min_bw theme

--- a/foot/themes/min_bw.ini
+++ b/foot/themes/min_bw.ini
@@ -9,8 +9,8 @@ alpha=1.0
 
 # text
 foreground=dddddd
-background=121211
-selection-foreground=121211
+background=242423
+selection-foreground=242423
 selection-background=dddddd
 
 # black
@@ -18,28 +18,28 @@ regular0=121211
 bright0=323231
 
 # red
-regular1=ffabab
-bright1=ffbebc
+regular1=e06c75
+bright1=f07c85
 
 # green
-regular2=bffcc6
-bright2=dbffd6
+regular2=98c379
+bright2=a8d389
 
 # yellow
-regular3=fff5ba
-bright3=ffffd1
+regular3=e7c787
+bright3=f7d797
 
 # blue
-regular4=6eb5ff
-bright4=afcbff
+regular4=61afef
+bright4=71bfff
 
 # magenta
-regular5=c5a3ff
-bright5=fcc2ff
+regular5=de98fd
+bright5=eea8ff
 
 # cyan
-regular6=85e3ff
-bright6=c4faf8
+regular6=a3b8ef
+bright6=b3c8ff
 
 # white
 regular7=dddddd
