added min_wb theme

--- a/foot/themes/min_wb.ini
+++ b/foot/themes/min_wb.ini
@@ -2,16 +2,16 @@
 font=UbuntuMono Nerd Font:size=16
 
 [cursor]
-color=242423 dddddd
+color=dddddd 242423
 
 [colors]
 alpha=1.0
 
 # text
-foreground=dddddd
-background=242423
-selection-foreground=242423
-selection-background=dddddd
+foreground=242423
+background=dddddd
+selection-foreground=dddddd
+selection-background=242423
 
 # black
 regular0=121211
