--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,7 +46,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 $terminal = foot
 $navigator = firefox
-$notes = obsidian #--enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime
 
 
 ###########
@@ -157,10 +156,10 @@ bind = $mod SHIFT, 0, movetoworkspace, 10
 input {
 	# keyboard
 	# kb_file = 
-	kb_layout = kr
+	kb_layout =
 	kb_variant =
 	kb_model =
-	kb_options = korean:ralt_hangul
+	kb_options =
 	kb_rules =
 	numlock_by_default = false
 	resolve_binds_by_sym = false
