added hyprland monitor mirroring

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,8 @@ misc {
 # Monitors
 ##########
 
-monitor = , 1920x1080@60, 0x0, 1.0
+monitor = , highres, 0x0, 1.0
+monitor = , highres, 0x0, 1.0, mirror, eDP-1
 
 xwayland {
     force_zero_scaling = true
