--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -69,8 +69,8 @@ env = HYPRCURSOR_SIZE, 16
 
 general {
 	# mouse sentivity
-	sensitivity = 0.8
-	apply_sens_to_raw = false
+	#sensitivity = 0.8
+	#apply_sens_to_raw = false
 
 	# window resize
 	resize_on_border = false
