feat: add screenshot key

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,6 +119,9 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 #bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 #bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+# screenshot
+bind = $mod, S, exec, grim ~/Pictures/$(date +'%s_screenshot.png')
+
 # move focus
 bind = $mod, H, movefocus, l
 bind = $mod, L, movefocus, r
