feat: wallpapers, volume shortcuts

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,8 +26,11 @@ misc {
 # Monitors
 ##########
 
-monitor = , highres, 0x0, 1.0
-monitor = , highres, 0x0, 1.0, mirror, eDP-1
+monitor = eDP-1, highres, 0x0, 1.0
+# Mirror main monitor
+#monitor = , highres, 0x0, 1.0, mirror, eDP-1
+# Independant monitor
+#monitor = , highres, 0x0, 1.0
 
 xwayland {
     force_zero_scaling = true
@@ -53,6 +56,7 @@ $navigator = firefox
 # Autostart
 ###########
 
+exec-once = hyprpaper
 
 
 #######################
@@ -115,9 +119,9 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 
 # sound
-#bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-#bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-#bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # screenshot
 bind = $mod, S, exec, grim ~/Pictures/$(date +'%s_screenshot.png')
