--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,9 +1,9 @@
 # Preload wallpapers
-preload = ./wallpapers/min_bw.png
-preload = ./wallpapers/min_wb.png
+preload = ~/.config/hypr/wallpapers/min_bw.png
+preload = ~/.config/hypr/wallpapers/min_wb.png
 
-# Set wallpaper
-wallpaper = , ./wallpapers/min_bw.png
+# Set default wallpaper
+wallpaper = , ~/.config/hypr/wallpapers/min_bw.png
 
-# ipc
-ipc = off
+# IPC
+ipc = on
