feat: hypridle and hyprlock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,6 +57,7 @@ $navigator = firefox
 ###########
 
 exec-once = hyprpaper
+exec-once = hypridle
 
 
 #######################
@@ -110,6 +111,7 @@ bind = $mod, W, exec, $navigator
 # kill / exit / lock
 bind = $mod, C, killactive,
 bind = $mod, M, exit,
+bind = $mod, L, exec, pidof hyprlock || hyprlock
 
 # fullscreen
 bind = $mod, F, fullscreen
