fix: typo that blocked brightnessctl to resume

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -2,7 +2,7 @@
 listener {
     timeout = 120
     on-timeout = brightnessctl -s set 10
-    on-resume = brightness -r
+    on-resume = brightnessctl -r
 }
 
 # lock screen
