feat: cousine font, docs alias, tex lsp

--- a/foot/themes/min_wb.ini
+++ b/foot/themes/min_wb.ini
@@ -1,5 +1,7 @@
 [main]
-font=UbuntuMono Nerd Font:size=16
+#font=JetBrainsMono Nerd Font:size=14
+font=Cousine:size=14
+#font=UbuntuMono Nerd Font:size=16
 
 [cursor]
 color=dddddd 242423
