--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,2 +1,46 @@
 [main]
-include=~/.config/foot/themes/min_bw.ini
+font=Jetbrains Mono NF: size=14
+
+[cursor]
+color=242423 dddddd
+
+[colors]
+alpha=0.6
+
+# text
+foreground=dddddd
+background=000000
+selection-foreground=121211
+selection-background=dddddd
+
+# black
+regular0=121211
+bright0=323231
+
+# red
+regular1=e06c75
+bright1=f07c85
+
+# green
+regular2=98c379
+bright2=a8d389
+
+# yellow
+regular3=e7c787
+bright3=f7d797
+
+# blue
+regular4=61afef
+bright4=71bfff
+
+# magenta
+regular5=de98fd
+bright5=eea8ff
+
+# cyan
+regular6=a3b8ef
+bright6=b3c8ff
+
+# white
+regular7=dddddd
+bright7=ffffff
