--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,9 +1,9 @@
 # brightness
-listener {
-    timeout = 120
-    on-timeout = brightnessctl -s set 10
-    on-resume = brightnessctl -r
-}
+#listener {
+#    timeout = 120
+#    on-timeout = brightnessctl -s set 10
+#    on-resume = brightnessctl -r
+#}
 
 # lock screen
 listener {
