--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,9 +1,8 @@
-# Preload wallpapers
-preload = ~/.config/hypr/wallpapers/min_bw.png
-preload = ~/.config/hypr/wallpapers/min_wb.png
+# Preload wallpaper
+preload = ~/.config/hypr/wallpaper.png
 
 # Set default wallpaper
-wallpaper = , ~/.config/hypr/wallpapers/min_bw.png
+wallpaper = , ~/.config/hypr/wallpaper.png
 
 # IPC
 ipc = on
