--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-source = ./themes/min_bw.conf
+source = ./variables.conf
 
 # -----------------------------------------------------------
 # Theme
@@ -14,7 +14,78 @@ misc {
 	splash_font_family = 
 
 	# wallpaper
+    background_color = 0xff121211
 	force_default_wallpaper = -1
+}
+
+general {
+	# window borders
+	border_size = 0
+	no_border_on_floating = false
+
+	col.inactive_border = 0x00000000
+	col.active_border = 0x00000000
+	col.nogroup_border = 0x00000000
+	col.nogroup_border_active = 0x00000000
+
+	# window gaps
+	gaps_in = 8
+	gaps_out = 16
+	gaps_workspaces = 0
+}
+
+decoration {
+	# corners
+	rounding = 8
+
+	# opacity
+	active_opacity = 1.0
+	inactive_opacity = 1.0
+	fullscreen_opacity = 1.0
+
+	# shadow
+	drop_shadow = true
+    shadow_range = 8
+	shadow_render_power = 2
+	shadow_ignore_window = true
+	col.shadow = 0x88000000
+	col.shadow_inactive = 0x0000000
+	shadow_offset = 0, 0
+	shadow_scale = 1.0
+
+	# dim
+	dim_inactive = false
+	dim_strength = 0.5
+	dim_special = 0.2
+	dim_around = 0.4
+	screen_shader = 
+
+	blur {
+		enabled = true
+
+		size = 0
+		passes = 4
+		ignore_opacity = false
+		new_optimizations = true
+		xray = false
+		noise = 0.0117
+		contrast = 0.8916
+		brightness = 0.8172
+		vibrancy = 0.1696
+		vibrancy_darkness = 0.0
+		special = false
+		popups = false
+		popups_ignorealpha = 0.2
+	}
+}
+
+animations {
+	enabled = true
+	first_launch_animation = true
+	
+	bezier = quad, 0.45, 0, 0.55, 1
+	
+	animation = global, 1, 4, quad 
 }
 
 
@@ -26,11 +97,9 @@ misc {
 # Monitors
 ##########
 
-monitor = eDP-1, highres, 0x0, 1.0
-# Mirror main monitor
-#monitor = , highres, 0x0, 1.0, mirror, eDP-1
-# Independant monitor
-#monitor = , highres, 0x0, 1.0
+
+monitor = $main_monitor, 1920x1080@240, 0x0, 1.0
+monitor = $left_monitor, 1920x1080@75, -1920x0, 1.0
 
 xwayland {
     force_zero_scaling = true
@@ -43,22 +112,34 @@ xwayland {
 
 windowrulev2 = suppressevent maximize, class:.*
 
+workspace = 1, monitor:$left_monitor
+workspace = 2, monitor:$main_monitor, default:true
+workspace = 3, monitor:$main_monitor
+workspace = 4, monitor:$main_monitor
+workspace = 5, monitor:$main_monitor
+workspace = 6, monitor:$main_monitor
+workspace = 7, monitor:$main_monitor
+workspace = 8, monitor:$main_monitor
+workspace = 9, monitor:$main_monitor
+workspace = 10, monitor:$main_monitor
+
+windowrule = workspace 10, discord
 
 ##########
 # Programs
 ##########
 
 $terminal = foot
-$navigator = firefox
+$navigator = librewolf
+$file_manager = dolphin
 
-
-###########
+##########
 # Autostart
 ###########
 
 exec-once = hyprpaper
 exec-once = hypridle
-
+exec-once = dunst
 
 #######################
 # Environment variables
@@ -91,11 +172,6 @@ general {
 	allow_tearing = false
 }
 
-master {
-	# master window
-	#new_is_master = true
-}
-
 
 #############
 # Keybindings
@@ -107,6 +183,8 @@ $mod = SUPER
 # programs
 bind = $mod, Q, exec, $terminal
 bind = $mod, W, exec, $navigator
+bind = $mod, E, exec, $file_manager
+bind = $mod, D, exec, discord
 
 # kill / exit / lock
 bind = $mod, C, killactive,
@@ -126,13 +204,7 @@ bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # screenshot
-bind = $mod, S, exec, grim ~/Pictures/$(date +'%s_screenshot.png')
-
-# move focus
-bind = $mod, H, movefocus, l
-bind = $mod, L, movefocus, r
-bind = $mod, K, movefocus, u
-bind = $mod, J, movefocus, d
+bind = $mod SHIFT, S, exec, grim -g "$(slurp)" ~/Pictures/$(date +'%s_screenshot.png') | wl-copy
 
 # switch workspace
 bind = $mod, 1, workspace, 1
@@ -208,6 +280,7 @@ input {
 
 cursor {
     inactive_timeout = 2
+    no_hardware_cursors = true
 }
 
 gestures {
