--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,4 +1,4 @@
-source = ./locks/min_bw.conf
+source = ./variables.conf
 
 general {
     # loading
@@ -15,4 +15,79 @@ general {
     # performance
     ignore_empty_input = true
     immediate_render = false
+}
+
+background {
+    monitor =
+    path = ~/.config/hypr/wallpaper.png
+    color = 0xff121211
+
+    # blur
+    blur_passes = 0
+}
+
+label {
+    monitor = $main_monitor
+    text = $TIME
+
+    # apprearance
+    text_align = center
+    color = 0xffdddddd
+    font_size = 100
+    font_family = Jetbrains Mono NF
+    rotate = 0
+    position = 0, 0
+    halign = center
+    valign = center
+
+    # shadow
+    shadow_passes = 2
+    shadow_size = 8
+    shadow_color = 0x88000000
+    shadow_boost = 1.2
+}
+
+input-field {
+    monitor = $main_monitor
+
+    # appearance
+    hide_input = true
+    size = 0, 0
+    position = 0, -200
+    halign = center
+    valign = center
+    outline_thickness = 0
+    fade_on_empty = true
+    fade_timeout = 400
+    rounding = 8
+
+    # dots
+    dots_size = 0.3
+    dots_spacing = 0.4
+    dots_center = true
+    dots_rounding = 0
+
+    # color
+    outer_color = 0x00000000
+    inner_color = 0x88000000
+    font_color = 0xffdddddd
+    swap_font_color = false
+    capslock_color = -1
+    numlock_color = -1
+    invert_numlock = false
+    bothlock_color = -1
+    check_color = 0x00000000
+    fail_color = 0xffff2200
+
+    # checks
+    placeholder_text =
+    fail_text =
+    fail_timeout = 400
+    fail_transition = 200
+
+    # shadow
+    shadow_passes = 2
+    shadow_size = 8
+    shadow_color = 0x88000000
+    shadow_boost = 1.2
 }
