--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -85,7 +85,7 @@ animations {
 	
 	bezier = quad, 0.45, 0, 0.55, 1
 	
-	animation = global, 1, 4, quad 
+	animation = global, 1, 2, quad 
 }
 
 
@@ -112,7 +112,7 @@ xwayland {
 
 windowrulev2 = suppressevent maximize, class:.*
 
-workspace = 1, monitor:$left_monitor
+workspace = 1, monitor:$left_monitor, default:true
 workspace = 2, monitor:$main_monitor, default:true
 workspace = 3, monitor:$main_monitor
 workspace = 4, monitor:$main_monitor
@@ -121,9 +121,11 @@ workspace = 6, monitor:$main_monitor
 workspace = 7, monitor:$main_monitor
 workspace = 8, monitor:$main_monitor
 workspace = 9, monitor:$main_monitor
-workspace = 10, monitor:$main_monitor
+workspace = 10, monitor:$left_monitor
 
-windowrule = workspace 10, discord
+# windowrule = workspace 10, discord
+windowrulev2 = workspace 10, class:(discord)
+windowrulev2 = fullscreen, class:(discord)
 
 ##########
 # Programs
