fix: env vars for vesktop

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,6 +127,13 @@ workspace = 10, monitor:$left_monitor
 windowrulev2 = workspace 10, class:(discord)
 windowrulev2 = fullscreen, class:(discord)
 
+# Screen sharing
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+
 ##########
 # Programs
 ##########
