fix: mouse follow for drop down menus

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -97,7 +97,6 @@ animations {
 # Monitors
 ##########
 
-
 monitor = $main_monitor, 1920x1080@240, 0x0, 1.0
 monitor = $left_monitor, 1920x1080@75, -1920x0, 1.0
 
@@ -123,24 +122,8 @@ workspace = 8, monitor:$main_monitor
 workspace = 9, monitor:$main_monitor
 workspace = 10, monitor:$left_monitor
 
-# windowrule = workspace 10, discord
-windowrulev2 = workspace 10, class:(discord)
-windowrulev2 = fullscreen, class:(discord)
-
-# Screen sharing
-windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrulev2 = noblur, class:^(xwaylandvideobridge)$
-
-##########
-# Programs
-##########
-
-$terminal = foot
-$navigator = librewolf
-$file_manager = dolphin
+windowrulev2 = workspace 10, class:($main_com)
+windowrulev2 = fullscreen, class:($main_com)
 
 ##########
 # Autostart
@@ -148,7 +131,7 @@ $file_manager = dolphin
 
 exec-once = hyprpaper
 exec-once = hypridle
-exec-once = dunst
+
 
 #######################
 # Environment variables
@@ -193,7 +176,8 @@ $mod = SUPER
 bind = $mod, Q, exec, $terminal
 bind = $mod, W, exec, $navigator
 bind = $mod, E, exec, $file_manager
-bind = $mod, D, exec, discord
+bind = $mod, D, exec, $main_com
+bind = $mod, Z, exec, zoom
 
 # kill / exit / lock
 bind = $mod, C, killactive,
@@ -247,10 +231,10 @@ bind = $mod SHIFT, 0, movetoworkspace, 10
 input {
 	# keyboard
 	# kb_file = 
-	kb_layout =
+    kb_layout =
+    kb_options =
 	kb_variant =
 	kb_model =
-	kb_options =
 	kb_rules =
 	numlock_by_default = false
 	resolve_binds_by_sym = false
@@ -259,6 +243,7 @@ input {
 
 	# mouse
 	follow_mouse = 1
+	mouse_refocus = false
 	sensitivity = 0
 	accel_profile = flat
 	force_no_accel = true
@@ -269,7 +254,6 @@ input {
 	scroll_button_lock = 0
 	scroll_factor = 1.0
 	natural_scroll = false
-	mouse_refocus = true
 	float_switch_override_focus = 1
 	special_fallthrough = false
 	off_window_axis_events = 1
