--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -1,3 +1,9 @@
 # Monitor
 $main_monitor = DP-3
 $left_monitor = HDMI-A-1
+
+# Programs
+$terminal = foot
+$navigator = librewolf
+$file_manager = dolphin
+$main_com = vesktop
