feat: shortcut for virtualbox

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -178,6 +178,7 @@ bind = $mod, W, exec, $navigator
 bind = $mod, E, exec, $file_manager
 bind = $mod, D, exec, $main_com
 bind = $mod, Z, exec, zoom
+bind = $mod, V, exec, virtualbox
 
 # kill / exit / lock
 bind = $mod, C, killactive,
