fix: hyprlock input

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -51,8 +51,8 @@ input-field {
     monitor = $main_monitor
 
     # appearance
-    hide_input = true
-    size = 0, 0
+    hide_input = false
+    size = 256, 40
     position = 0, -200
     halign = center
     valign = center
